syntax = "proto3";

option go_package = "github.com/poommu-sp/public-exim-grpc-protocol/samantra/services/phantha_service;phantha";

import "google/protobuf/timestamp.proto";
package samantra.services.phantha;

service Phantha {
  rpc ListPhantha(ListPhanthaPayload) returns (ListPhanthaResponse) {}
}

message ListPhanthaPayload {
  google.protobuf.Timestamp RequestDate = 1;
}

message ListPhanthaResponse {
  repeated PhanthaItem ListPhantha = 1;
}

message PhanthaItem {
  string ProductCode = 1;
  string ProductName = 2;
  string Operation = 3;
  string SubOperation = 4;
  string FromLocation = 5;
  int64 FromLocationPlantId = 6;
  string DeliveryLocation = 7;
  int64 DeliveryLocationPlantId = 8;
  double RouteQuotaWGH = 9;
  string LotNO = 10;
  string RouteEXT = 11;
  int64 APTNo = 12;
  string VehicleCode = 13;
  string Arrived = 14;
  google.protobuf.Timestamp SrcGrossTime = 15;
  double Weight = 16;
  bool Valid = 17;
  float QuotaWeight = 18;
  float QuotaQty = 19;    
}


